# build_dataset

./: README.md  build_dataset.py  build_simple_datasets.py  build_swebench_dataset.py  get_tests.py  pyproject.toml  remove_repos.py  scrape_pdf.py  utils.py
data/: repos.yml
